added mailing system

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,7 +7,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 # Set the logging level for the root logger to INFO
 logging.level.root=INFO
@@ -21,4 +21,19 @@ logging.file.name=log.txt
 logging.file.path=/
 logging.file.max-size=10MB
 logging.file.max-history=5
+
+
+#--------------email config------------
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=anantashrestha912@gmail.com
+spring.mail.password=jfxgrbujjmosijyi
+# Other properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# TLS , port 587
+spring.mail.properties.mail.smtp.starttls.enable=true
 
