added photo feature

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -37,3 +37,6 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 # TLS , port 587
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+aws.accessKey=AKIAVP6XFNVLFR35HZ7D
+aws.secretKey=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
+aws.bucketName=machnet-ananta-test
