--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,32 @@
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk -->
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk</artifactId>
+			<version>1.11.106</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.1</version> <!-- Use the latest version -->
+		</dependency>
+
+		<!--		<dependency>-->
+		<!--			<groupId>software.amazon.awssdk</groupId>-->
+		<!--			<artifactId>s3</artifactId>-->
+		<!--		</dependency>-->
+
+		<!-- https://mvnrepository.com/artifact/software.amazon.awssdk/s3 -->
+		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>s3</artifactId>
+			<version>2.21.46</version>
+		</dependency>
+
+
 
 		<dependency>
 			<groupId>org.apache.poi</groupId>
