--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -8,3 +8,20 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
+#--------------email config------------
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=anantashrestha912@gmail.com
+spring.mail.password=jfxgrbujjmosijyi
+# Other properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# TLS , port 587
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+aws.accessKey=AKIAVP6XFNVLFR35HZ7D
+aws.secretKey=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
+aws.bucketName=machnet-ananta-test
